PROJECT(TPS)

SET(
        TPS_SRC
        tps/Tps.cpp
        utils/utils.cpp
)

#shared library
ADD_LIBRARY(TPS SHARED ${TPS_SRC})

#static library
ADD_LIBRARY(TPS_STATIC STATIC ${TPS_SRC})
SET_TARGET_PROPERTIES(TPS_STATIC PROPERTIES OUTPUT_NAME "TPS")
SET_TARGET_PROPERTIES(TPS PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES(TPS_STATIC PROPERTIES CLEAN_DIRECT_OUTPUT 1)